@@ -4151,3 +4151,8 @@ $wgCrossSiteAJAXdomains = array();
  */
 $wgCrossSiteAJAXdomainsRegex = false;
 
+/**
+ * The minimum amount of memory that MediaWiki "needs"; MediaWiki will try to raise PHP's memory limit if it's below this amount.
+ */
+$wgMemoryLimit = "50M";
+
